# zuv

./: .gitignore  README.md
.github/workflows/: pypi.yml  release-bundle.yml
examples/bigtest/: main.py  pyproject.toml
examples/bigtest/src/: main.py
examples/fastapi/: README.md  pyproject.toml
examples/fastapi/src/: example.env  main.py
examples/fastapi/src/api/: __init__.py
examples/fastapi/src/frontend/: index.html
src/: LICENSE  pyproject.toml
src/zuv/: _loader_template.py  builder.py  cli.py  constants.py  inspector.py
src/zuv/modules/: build.py  cache.py  pack.py  updater.py  wheels.py  zip.py
