[project]
name = "zuv"
version = "0.5.1"
description = "Bundle any uv project into a single runnable .py file."
requires-python = ">=3.13"
dependencies = []
dynamic = ["readme"]
license = "MIT"
authors = [{name = "HamzaYslmn"}]
keywords = ["uv", "bundle", "pep723", "packaging", "single-file"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/HamzaYslmn/zuv"
Repository = "https://github.com/HamzaYslmn/zuv"
Issues = "https://github.com/HamzaYslmn/zuv/issues"

[project.scripts]
zuv = "zuv.cli:main"

[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zuv"]

# README lives at repo root; pull it in at build time via a relative reference.
[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "../README.md"
